# mruby-cmake-configurator

./: .gitmodules  CMakeLists.txt  LICENSE
template/: config.rb.in
